@startuml Timebox3_Class
hide circle
skinparam classAttributeIconSize 0
title Timebox 3 - Timetable, Attendance, and Communication

class User {
  +id: bigint
  +name: varchar
  +email: varchar
  +role: varchar
  +photo: varchar
  +created_at: timestamp
  +updated_at: timestamp
  --
  +student()
  +sentMessages()
  +receivedMessages()
  +teachingCourses()
  +teachingSubjects()
  +hasRole(role)
  +isStudent()
  +isTeacher()
  +isStaff()
}

class Student {
  +id: bigint
  +user_id: bigint
  +student_no: varchar
  +created_at: timestamp
  +updated_at: timestamp
  --
  +user()
  +courses()
  +attendances()
}

note right of Student
  `full_name`/email are derived via User.
end note

class Course {
  +id: bigint
  +course_code: varchar
  +title: varchar
  +attendance_threshold: decimal(5,2)
  +created_at: timestamp
  +updated_at: timestamp
  --
  +subjects()
  +students()
  +teachers()
  +attendances()
  +timetables()
}

class Subject {
  +id: bigint
  +course_id: bigint
  +subject_code: varchar
  +title: varchar
  +attendance_threshold: decimal(5,2)
  +created_at: timestamp
  +updated_at: timestamp
  --
  +course()
  +teachers()
  +timetables()
  +attendances()
}

class Timetable {
  +id: bigint
  +subject_id: bigint
  +day_of_week: varchar
  +start_time: time
  +end_time: time
  +location: varchar
  +created_by: bigint
  +created_at: timestamp
  +updated_at: timestamp
  --
  +subject()
  +creator()
  +getCourseAttribute()
}

class Attendance {
  +id: bigint
  +subject_id: bigint
  +student_id: bigint
  +date: date
  +status: enum(present,absent)
  +created_at: timestamp
  +updated_at: timestamp
  --
  +subject()
  +student()
  +getCourseAttribute()
}

class LowAttendanceAlertState {
  +id: bigint
  +student_id: bigint
  +last_rate: decimal(5,2)
  +is_below_threshold: boolean
  +last_alert_sent_at: timestamp
  +created_at: timestamp
  +updated_at: timestamp
  --
  +student()
}

class Announcement {
  +id: bigint
  +user_id: bigint
  +title: varchar
  +body: text
  +priority: varchar
  +pinned: boolean
  +require_ack: boolean
  +audience: json
  +publish_at: timestamp
  +expires_at: timestamp
  +visible_from: timestamp
  +visible_until: timestamp
  +created_at: timestamp
  +updated_at: timestamp
  --
  +author()
  +reads()
  +scopeCurrentlyVisible(now)
  +scopeVisibleToUser(user)
}

class AnnouncementRead {
  +id: bigint
  +announcement_id: bigint
  +user_id: bigint
  +read_at: timestamp
  +acknowledged_at: timestamp
  +created_at: timestamp
  +updated_at: timestamp
  --
  +announcement()
  +user()
}

class Message {
  +id: bigint
  +sender_id: bigint
  +sender_role: varchar
  +receiver_id: bigint
  +receiver_role: varchar
  +body: text
  +read: boolean
  +created_at: timestamp
  +updated_at: timestamp
  --
  +sender()
  +receiver()
}

class Notification <<laravel-notification>> {
  +id: uuid
  +notifiable_type: varchar
  +notifiable_id: bigint
  +type: varchar
  +data: text
  +read_at: timestamp
  +created_at: timestamp
  +updated_at: timestamp
}

class ContactMessage {
  +id: bigint
  +first_name: varchar
  +last_name: varchar
  +email: varchar
  +phone: varchar
  +subject: varchar
  +message: text
  +reply: text
  +is_read: boolean
  +replied_at: timestamp
  +created_at: timestamp
  +updated_at: timestamp
}

class FeedbackMessage {
  +id: bigint
  +name: varchar
  +email: varchar
  +type: varchar
  +message: text
  +is_read: boolean
  +replied_at: timestamp
  +created_at: timestamp
  +updated_at: timestamp
}

Course  "1" -- "0..*" Subject
Subject "1" -- "0..*" Timetable
User    "0..1" -- "0..*" Timetable : created_by

Subject "1" -- "0..*" Attendance
Student "1" -- "0..*" Attendance
Student "1" -- "0..1" LowAttendanceAlertState

User "1" -- "0..*" Announcement : author
Announcement "1" -- "0..*" AnnouncementRead
User "1" -- "0..*" AnnouncementRead

User "1" -- "0..*" Message : sender
User "1" -- "0..*" Message : receiver

User "1" -- "0..*" Notification : notifiable

@enduml
